--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/cannon": "^6.5.2",
     "@react-three/drei": "^9.74.16",
     "@react-three/fiber": "^8.13.3",
     "@types/node": "20.3.1",
