--- a/package.json
+++ b/package.json
@@ -20,7 +20,12 @@
     "next": "13.4.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "socket.io": "^4.7.0",
+    "socket.io-client": "^4.7.0",
     "three": "^0.153.0",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.195"
   }
 }
