--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-three/cannon": "^6.5.2",
     "@react-three/drei": "^9.74.16",
     "@react-three/fiber": "^8.13.3",
+    "@types/dotenv": "^8.2.0",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
