--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-three/cannon": "^6.5.2",
     "@react-three/drei": "^9.74.16",
     "@react-three/fiber": "^8.13.3",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/dotenv": "^8.2.0",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
@@ -22,6 +23,7 @@
     "next": "13.4.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.1.1",
     "socket.io": "^4.7.0",
     "socket.io-client": "^4.7.0",
     "three": "^0.153.0",
